# col-nomina-electronica-co

./: README.md  pyproject.toml
src/nomina_electronica_co/: __init__.py  core.py
