[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomina-electronica-co"
version = "1.0.0"
description = "Librería para cálculo de nómina colombiana y generación XML UBL 2.1 DIAN"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nomina Electrónica CO", email = "dev@nominaelectronica.co"}
]
keywords = ["nomina", "colombia", "dian", "ubl", "pila", "seguridad-social"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "lxml>=4.9.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/nomina-electronica-co"
Documentation = "https://nomina-electronica-co.readthedocs.io"
Repository = "https://github.com/tu-usuario/nomina-electronica-co.git"
Issues = "https://github.com/tu-usuario/nomina-electronica-co/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 80
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nomina_electronica_co --cov-report=term-missing"
